--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,10 @@
-<style>
-  h1 {
-    font-size: 3.125rem;
-    color: var(--gray-900);
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: -0.125rem;
-    margin: 0;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-  }
+<nav>
+  <a routerLink="/">Accueil</a>
+  <a routerLink="/monprono">Mes pronostics</a>
+</nav>
 
-  p {
-    margin: 0;
-    color: var(--gray-700);
-  }
+<router-outlet></router-outlet>
 
-  main {
-    width: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    box-sizing: inherit;
-    position: relative;
-  }
-
-  .content {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 700px;
-    margin-bottom: 3rem;
-  }
-</style>  
-
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-   Bienvenue sur le meilleur site de pronostics du tour de France du monde !  
-    </div>
-  </div>
-</main>
+<footer>
+  <p>&copy; 2025 - Mon App</p>
+</footer>
