--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
      </div>
      <div class="left-side">
      <button (click)="viewMyProno()">Mes pronostics</button>
-   <!-- .  <button (click)="onContinue()">Résultats</button>
-     -->
+    </div>
+    <div class="left-side">
+     <button (click)="viewResults()">Résultats</button>
  </div>
