--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+/* Fond général avec image */
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Segoe UI', sans-serif;
+    background: url('https://upload.wikimedia.org/wikipedia/commons/2/2a/France_location_map-Regions_and_departments-2016.svg')
+      no-repeat center center fixed;
+    background-size: cover;
+  }
