--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,12 @@
-<div class="left-side">
-    Bienvenue sur le meilleur site de pronostics du tour de France du monde !  
-     </div>
-     <div class="left-side">
-     <button (click)="viewMyProno()">Mes pronostics</button>
+<div class="page-container">
+    <div class="welcome">
+      Bienvenue sur le meilleur site de pronostics du tour de France du monde !
     </div>
     <div class="left-side">
-     <button (click)="viewResults()">Résultats</button>
- </div>
+      <button (click)="viewMyProno()">Mes pronostics</button>
+    </div>
+    <div class="right-side">
+      <button (click)="viewResults()">Résultats</button>
+    </div>
+  </div>
+  
