--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,11 @@
 <div class="page-container">
-    <div class="welcome">
-      Bienvenue sur le meilleur site de pronostics du tour de France du monde !
-    </div>
-    <div class="left-side">
-      <button (click)="viewMyProno()">Mes pronostics</button>
-    </div>
-    <div class="right-side">
-      <button (click)="viewResults()">Résultats</button>
-    </div>
+  <div class="welcome">
+    Bienvenue sur le meilleur site de pronostics du tour de France du monde !
   </div>
-  
+
+  <div class="buttons-row">
+    <button (click)="viewMyProno() "class="bouton">Mes pronostics</button>
+    <div class="spacer"></div>
+    <button (click)="viewResults()" class="bouton">Résultats</button>
+  </div>
+</div>
