--- a/src/app/mon-prono/mon-prono.component.css
+++ b/src/app/mon-prono/mon-prono.component.css
@@ -1,49 +1,78 @@
 .page-container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url('/assets/carte_tdf.png'); 
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  
-  .formulaire {
-    background: rgba(255, 255, 255, 0.6); /* blanc avec x% d'opacité */
-    padding: 30px;
-    border-radius: 10px;
-    max-width: 400px;
-    width: 90%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
-  button {
-    width: 100%;
-    padding: 12px;
-    background-color: #f1c40f;
-    border: none;
-    border-radius: 6px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #d4ac0d;
-  }
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('/assets/carte_tdf.png'); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  h2 {
-    color: red !important;
-  }
-  
-  
+.btn-accueil {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  padding: 10px 20px;
+  background-color: #B62495;
+  color: #ffffff;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.btn-accueil:hover {
+  background-color: #B62495;
+  color: #ffffff;
+}
+
+.formulaire {
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 25px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.input-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.input-row label {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.input-row input {
+  flex: 2;
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  background-color: #B62495;
+  color: #ffffff;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #B62495;
+  color: #ffffff;
+}
+
+h2 {
+  text-align: center;
+  font-weight: bold;
+}
