--- a/src/app/resultat/resultat.component.html
+++ b/src/app/resultat/resultat.component.html
@@ -1,6 +1,9 @@
 <div class="page-container">
-  <tr> <td><h2>Classement pronostiqué</h2></td>
-    <td><button (click)="viewAccueil()">Accueil</button></td>
+
+    <!-- Bouton Accueil en haut à gauche -->
+    <button class="btn-accueil" (click)="viewAccueil()">Accueil</button>
+  <tr> <td><h2>Résultats</h2></td>
+
 <div class="formulaire">
 <table border="1" cellpadding="6">
   <thead>
